static/messages.css
/* ... */
.add_comments {
  margin-top: 10px;
  margin-left: 5px;
  font-size: 0.7rem;
  font-style: italic;
  color: #007bff;
  cursor: pointer;
}

.add_comments:hover {
  color: rgb(6, 51, 237);
}

.comments_header {
  font-size: 0.9rem;
  font-weight: bold;
  color: #007bff;
  padding-left: 5px;
  cursor: pointer;
}

.comments_header:hover {
  color: rgb(6, 51, 237);
}

.comment_input {
  margin-top: 5px;
  padding: 4px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  width: 95%;
  align-self: center;
  border-radius: 5px;
}

.comment-button {
  padding: 5px;
  border-radius: 5px;
  border: 2px solid #007bff;
}

.comment-button:hover {
  background: #007bff;
  color: #fff;
  border: #fff 2px solid;
  padding: 5px;
}

.one_comment {
  background: #f1f0f0;
  padding: 8px 12px;
  border-radius: 10px;
  margin-top: 5px;
}

.comment_username {
  font-weight: bold;
  font-size: 0.9rem;
  color: #007bff;
  display: block;
  margin-bottom: 4px;
}

.comment_text {
  font-size: 0.9rem;
  font-weight: normal;
  color: #333;
  display: block;
  margin-bottom: 4px;
}

.comment_timestamp {
  width: 100%;
  text-align: right;
  font-size: 0.7rem;
  color: #666;
  display: block;
}

.GantParent {
  display: block;
  overflow: auto;
  min-height: 80%;
  min-width: 80%;
}

.button-flex {
  display: flex;
  flex-direction: row-reverse;
}

@media (max-width: 768px) {
  .one-document {
    padding-right: 0;
  }

  #diagramDlg {
    width: 96dvh;
    height: 89dvw;
    max-height: 89dvw !important;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(90deg);
    margin: 0;
    max-width: 96dvh;
    border: none;
    box-sizing: border-box;
  }

  #diagramDlg .mobile-flex {
    display: flex !important;
    flex-direction: column;
    justify-content: flex-end;
    height: 100%;
    box-sizing: border-box;
  }

  #diagramDlg .gant-parent {
    max-width: 100%;
    min-width: 0;
    min-height: 0;
    max-height: calc(100% - 75px);
    /* Leave room for button */
    flex: 1;
    margin-bottom: 4px;
  }

  #close_diagram_btn {
    max-width: 200px;
    width: auto !important;
    align-self: center;
    margin: 0 auto !important;
  }

  .Gant div {
    font-size: 0.8rem;
  }

}

